--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Heap",
   "description": "Traverse the web",
-  "version": "0.5",
+  "version": "0.6",
   "manifest_version": 2,
   "background": {
     "scripts": ["./assets/js/jquery-2.1.3.min.js", "background.js"]
   },
   "permissions": [
-    "http://heap.nobr.me/",
+    "*://nobr10-80.terminal.com/",
 	"tabs",
 	"webNavigation"
   ],
