--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["./assets/js/jquery-2.1.3.min.js", "background.js"]
   },
   "permissions": [
-    "*://nobr10-80.terminal.com/",
+    "*://heap.nobr.me/",
 	"tabs",
 	"webNavigation"
   ],
